[gd_scene load_steps=23 format=3 uid="uid://bkpq88nngww77"]

[ext_resource type="Script" path="res://scripts/level-cyberpunk_club.gd" id="1_dnggc"]
[ext_resource type="PackedScene" uid="uid://gcjybdmwgg1g" path="res://components/level_one_components/level_1_game_view.tscn" id="2_brpbs"]
[ext_resource type="Texture2D" uid="uid://5xqr3wq4x033" path="res://graphics/backgrounds/game_background.png" id="2_q2yq8"]
[ext_resource type="PackedScene" uid="uid://dxb2pihen2v8n" path="res://components/characters/Ciea.tscn" id="4_1akbd"]
[ext_resource type="PackedScene" uid="uid://cdgadr78q5tt8" path="res://components/CodeEditor.tscn" id="4_mag5e"]
[ext_resource type="Script" path="res://scripts/Level1_Section1_Visuals .gd" id="4_pvoq3"]
[ext_resource type="PackedScene" uid="uid://dhj841h4w5krh" path="res://components/dialogue_balloon.tscn" id="6_ik05y"]
[ext_resource type="PackedScene" uid="uid://dh0mb5kxm1ahd" path="res://components/info_box.tscn" id="8_xr067"]
[ext_resource type="PackedScene" uid="uid://cd0k16fcl3wv5" path="res://components/characters/WhiteWizard.tscn" id="9_365b2"]
[ext_resource type="Script" path="res://scripts/info_box.gd" id="9_pt8l3"]
[ext_resource type="PackedScene" uid="uid://dbl5blkk2ca5w" path="res://components/transition_scene.tscn" id="10_1kacu"]
[ext_resource type="Script" path="res://scripts/Level1_Section2_Visuals.gd" id="10_lpols"]
[ext_resource type="PackedScene" uid="uid://b6mdpascsx806" path="res://components/level_one_components/cyber_city_map.tscn" id="11_6mxwu"]
[ext_resource type="PackedScene" uid="uid://54q1fxqrmf8c" path="res://components/CodePrompt.tscn" id="13_6l6q6"]
[ext_resource type="Texture2D" uid="uid://b1hci10fvy6nc" path="res://assets/ui/buttons/backButton_1.png" id="13_m73nh"]
[ext_resource type="Texture2D" uid="uid://mha1sdby2nc8" path="res://assets/ui/buttons/backButtonHover.png" id="14_ui1t4"]
[ext_resource type="Script" path="res://scripts/DataHandler.gd" id="15_pqxbm"]
[ext_resource type="PackedScene" uid="uid://ft6ngvscr7s6" path="res://components/PopupWA.tscn" id="16_8se5u"]
[ext_resource type="PackedScene" uid="uid://bhighrpknnjks" path="res://components/PopupAC.tscn" id="16_oqmi1"]
[ext_resource type="Script" path="res://scripts/AnimationHandler.gd" id="18_7kmnn"]
[ext_resource type="PackedScene" uid="uid://b24ng4f1d6aka" path="res://components/inventory/BannerMenu.tscn" id="21_3eh1w"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_dlpu8"]

[node name="Level1" type="Node2D"]
material = SubResource("CanvasItemMaterial_dlpu8")
script = ExtResource("1_dnggc")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(960, 528)
texture = ExtResource("2_q2yq8")

[node name="GameView" parent="." instance=ExtResource("2_brpbs")]

[node name="AnimationNode1" type="Node" parent="."]
script = ExtResource("4_pvoq3")

[node name="Ciea" parent="AnimationNode1" instance=ExtResource("4_1akbd")]
visible = false

[node name="WhiteWizard" parent="AnimationNode1" instance=ExtResource("9_365b2")]
visible = false

[node name="DialogueBalloon" parent="AnimationNode1" instance=ExtResource("6_ik05y")]
visible = false
offset = Vector2(259, 2.08165e-12)
scale = Vector2(1.3, 1.3)
transform = Transform2D(1.3, 2.08165e-12, 2.08165e-12, 1.3, 259, 2.08165e-12)

[node name="Map" parent="AnimationNode1" instance=ExtResource("11_6mxwu")]

[node name="InfoBox" parent="AnimationNode1" instance=ExtResource("8_xr067")]
visible = false
offset = Vector2(330, 170)
transform = Transform2D(1, 0, 0, 1, 330, 170)
script = ExtResource("9_pt8l3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimationNode1/InfoBox"]

[node name="AnimationNode2" type="Node" parent="."]
script = ExtResource("10_lpols")

[node name="Hint" type="RichTextLabel" parent="AnimationNode2"]
visible = false
offset_left = 104.0
offset_top = 336.0
offset_right = 408.0
offset_bottom = 632.0
theme_override_font_sizes/normal_font_size = 50
text = "Each red dot is a malfunction robot. "

[node name="TransitionScene" parent="." instance=ExtResource("10_1kacu")]
offset_right = 1920.0
offset_bottom = 1024.0

[node name="CodePrompt" parent="." instance=ExtResource("13_6l6q6")]
offset_left = 1314.0
offset_top = 94.0
offset_right = 1314.0
offset_bottom = 94.0

[node name="CodeEditorNode" parent="." instance=ExtResource("4_mag5e")]
offset_left = 1253.0
offset_top = 107.0
offset_right = 1293.0
offset_bottom = 1028.0

[node name="BackButton" type="TextureButton" parent="."]
offset_left = 32.0
offset_top = 24.0
offset_right = 227.0
offset_bottom = 96.0
texture_normal = ExtResource("13_m73nh")
texture_pressed = ExtResource("14_ui1t4")
texture_hover = ExtResource("14_ui1t4")
ignore_texture_size = true
stretch_mode = 4

[node name="DataHandler" type="Node" parent="."]
script = ExtResource("15_pqxbm")

[node name="PopupAC" parent="." instance=ExtResource("16_oqmi1")]
visible = false
z_index = 1
position = Vector2(774, 260)

[node name="PopupWA" parent="." instance=ExtResource("16_8se5u")]
visible = false
position = Vector2(650, 230)

[node name="BannerMenu" parent="." instance=ExtResource("21_3eh1w")]

[node name="AnimationHandler" type="Node" parent="."]
script = ExtResource("18_7kmnn")

[connection signal="hide_dialogue" from="AnimationNode1/Ciea" to="AnimationNode1/DialogueBalloon" method="_on_ciea_hide_dialogue"]
[connection signal="hide_ciea" from="AnimationNode1/DialogueBalloon" to="AnimationNode1/Ciea" method="_on_dialogue_balloon_hide_ciea"]
[connection signal="hide_info" from="AnimationNode1/DialogueBalloon" to="." method="_on_dialogue_balloon_hide_info"]
[connection signal="hide_info" from="AnimationNode1/DialogueBalloon" to="AnimationNode1" method="_on_dialogue_balloon_hide_info"]
[connection signal="hide_wizard" from="AnimationNode1/DialogueBalloon" to="AnimationNode1/WhiteWizard" method="_on_dialogue_balloon_hide_wizard"]
[connection signal="map_popup" from="AnimationNode1/DialogueBalloon" to="AnimationNode1/Map" method="_on_dialogue_balloon_map_popup"]
[connection signal="show_info" from="AnimationNode1/DialogueBalloon" to="AnimationNode1/InfoBox" method="_on_dialogue_balloon_show_info"]
[connection signal="show_wizard" from="AnimationNode1/DialogueBalloon" to="AnimationNode1/WhiteWizard" method="_on_dialogue_balloon_show_wizard"]
[connection signal="start_challenge" from="AnimationNode1/DialogueBalloon" to="." method="_on_dialogue_start_challenge"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_pressed"]
